--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://templatemo.com/tm-530-mini-profile
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Mini Profile</h1>
-                <p class="tm-brand-description mb-0">Hello, my name is Anggun Mutiara Ratnasari. Usually known as Anggun.</p>
+                <p class="tm-brand-description mb-0">Hello, my name is Anggun Mutiara Ratnasari. Usually known as "Anggun"</p>
               </div>
             </div>
           </div>
@@ -42,7 +42,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-left">
                 <h2 class="tm-welcome-title">Welcome to My Mini Profile</h2>
                 <p class="pb-0">
-                  My name is Anggun Mutiara Ratnasari. I live in Purwodadi, Grobogan, Central Java. 
+                  My name is Anggun Mutiara Ratnasari. I live in Purwodadi, Grobogan, Central Java, Indonesia. 
                   I was born on 02 February 2020. Now, I'm 18 years old. 
                   Currently, I'm an IT student at President University. </p>
               </div>
@@ -52,7 +52,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-right">
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
-                  Here is my Curicullum Vitae (CV). You can download it by clicking the icon above!.
+                  Here is my Curicullum Vitae (CV). You can download it by clicking the icon above!
                 </p>
               </div>
             </div>
