--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ https://templatemo.com/tm-530-mini-profile
                 <h2 class="tm-welcome-title">Welcome to My Mini Profile</h2>
                 <p class="pb-0">
                   My name is Anggun Mutiara Ratnasari. I live in Purwodadi, Grobogan, Central Java, Indonesia. 
-                  I was born on 02 February 2020. Now, I'm 18 years old. 
-                  Currently, I'm an IT student at President University. </p>
+                  I was born on 02 February 2020. Now, I'm 18 
+                  years old. Currently, I'm an IT student at President University. </p>
               </div>
             </div>
             <!-- Brown bg -->
