--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@ https://templatemo.com/tm-530-mini-profile
         <div class="row">
           <div class="col-12">
             <div class="tm-portfolio-item">
+              <br>
+              <br>
+              <br>
+              <p1> My Personal Branding {
+               font-size: 18px;
+               font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+               text-align:center;}
+              </p1>
+              <br>
+              <br>
+              <br>
               <div class="tm-portfolio-name text-white tm-bg-green">
                 Project Manager
               </div>
