--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-left">
                 <h2 class="tm-welcome-title">Welcome to My Mini Profile</h2>
                 <p class="pb-0">
-                  My name is Anggun Mutiara Ratnasari. I live in Purwodadi, Grobogan, Central Java, Indonesia. 
-                  I was born on 02 February 2020. Now, I'm 18 
-                  years old. Currently, I'm an IT student at President University. </p>
+                  My name is Anggun Mutiara Ratnasari. 
+                  I live in Purwodadi, Grobogan, Central Java, Indonesia. 
+                  I was born on 02 February 2020. Now, I'm 18 years old. 
+                  Currently, I'm an IT student at President University. </p>
               </div>
             </div>
             <!-- Brown bg -->
@@ -63,22 +64,19 @@ https://templatemo.com/tm-530-mini-profile
     <!-- End Welcome section -->
 
     <!-- Portfolio section -->
+    <div class="tm-bg-white-transparent tm-welcome-container">
+        <div class="container-fluid">
+          <div class="row h-100">
+            <!-- Welcome Text -->
+            <!-- White transparent bg -->
+            <div class="col-md-7 tm-welcome-left-col">
+              <div class="tm-welcome-left">
+                <h2 class="tm-welcome-title">Welcome to My Mini Profile</h2>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <div class="tm-portfolio-item">
-              <br>
-              <br>
-              <br>
-              <p1> My Personal Branding {
-               font-size: 18px;
-               font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-               text-align:center;}
-              </p1>
-              <br>
-              <br>
-              <br>
               <div class="tm-portfolio-name text-white tm-bg-green">
                 Project Manager
               </div>
