--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@ https://templatemo.com/tm-530-mini-profile
     <!-- End Welcome section -->
 
     <!-- Portfolio section -->
+    <div class="row">
+          <footer class="col-12">
+            <p class="text-center tm-copyright-text">
+            My Personality</p>
+    <br>
+    <br>
+    <br>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
@@ -225,12 +232,6 @@ https://templatemo.com/tm-530-mini-profile
           </div>
         </div>
         <!-- row -->
-        <div class="row">
-          <footer class="col-12">
-            <p class="text-center tm-copyright-text">
-            Copyright 2020 Mini Profile Page 
-            
-            - Design: Template Mo</p>
           </footer>
         </div>
       </div>
