--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@ https://templatemo.com/tm-530-mini-profile
       </div>
     </section>
     <!-- End Welcome section -->
-
+    <br>
+    <br>
+    <br>
     <!-- Portfolio section -->
     <div class="row">
           <footer class="col-12">
-            <p class="text-center tm-copyright-text">
-            My Personality</p>
+            <h1 class="text-center tm-copyright-text">
+            My Personality</h1>
     <br>
     <br>
     <br>
