--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ https://templatemo.com/tm-530-mini-profile
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
                   Here is my Curicullum Vitae (CV). You can download it by clicking the icon above!
+                  <a href="Downloadable%20Resume_ANGGUN%20MUTIARA%20RATNASARI.pdf" target=address icon> Click It Here!</a>
                 </p>
               </div>
             </div>
