--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right">
-                <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
+                <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon" <a href="CV_ANGGUN%20MUTIARA%20RATNASARI.jpeg"></i></a>
                 <p class="mb-0">
                   Here is my Curicullum Vitae (CV). You can download it by clicking the icon above!
-                  <a href="CV_ANGGUN%20MUTIARA%20RATNASARI.jpeg" target=<i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>></a>
                 </p>
               </div>
             </div>
