--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right">
-                <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon" <a href="CV_ANGGUN%20MUTIARA%20RATNASARI.jpeg"></i></a>
+                <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"</i>
+                <a href="CV_Anggun%20Mutiara%20Ratnasari.jpeg" target=download> Click It Here!</a>
                 <p class="mb-0">
                   Here is my Curicullum Vitae (CV). You can download it by clicking the icon above!
                 </p>
