--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- White transparent bg -->
             <div class="col-md-7 tm-welcome-left-col">
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Welcome to My Mini Profile</h2>
+                <h2 class="tm-welcome-title">Welcome...</h2>
                 <p class="pb-0">
                   My name is Anggun Mutiara Ratnasari.
                   I live in Purwodadi, Grobogan, Central Java, Indonesia. 
@@ -52,7 +52,7 @@ https://templatemo.com/tm-530-mini-profile
             <div class="col-md-5">
               <div class="tm-welcome-right">
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"</i>
-                <a href="CV_Anggun%20Mutiara%20Ratnasari.jpeg" target="fas fa-4x fa-address-card p-3 tm-welcome-icon"></a>
+                <a href="CV_Anggun%20Mutiara%20Ratnasari.jpeg" target=<i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"</i>></a>
                 <p class="mb-0">
                   Here is my Curicullum Vitae (CV). You can download it by clicking the icon above!
                 </p>
