--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
-    <title>Mini Profile - Free Bootstrap CSS Template</title>
+    <title>Personal Branding</title>
     
 <!--
 Mini Profile Template
@@ -26,7 +26,7 @@ https://templatemo.com/tm-530-mini-profile
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Mini Profile</h1>
-                <p class="tm-brand-description mb-0">simple parallax template</p>
+                <p class="tm-brand-description mb-0">Hello! My name is Anggun Mutiara Ratnasari. Usually known as Anggun..</p>
               </div>
             </div>
           </div>
@@ -40,12 +40,12 @@ https://templatemo.com/tm-530-mini-profile
             <!-- White transparent bg -->
             <div class="col-md-7 tm-welcome-left-col">
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Welcome to Mini Profile Page</h2>
+                <h2 class="tm-welcome-title">Welcome....</h2>
                 <p class="pb-0">
-                  This is Bootstrap v4.3.1 parallax layout for you. Credit goes to <a rel="nofollow" href="https://www.pexels.com">Pexels</a> for 2 background images. In
-                  odio sapien, commodo id ullamcorper ac, dignissim at sapien.
-                  Nullam leo massa, vaius ac massa et, tincidunt imperdiet
-                turpis. </p>
+                  My name is Anggun Mutiara Ratnasari.
+                  I live in Grobogan, Central Java, Indonesia.
+                  I was born on 02 February 2020. Now, I'm 18 y.o.
+                  Currently I'm an IT Student at President University.</p>
               </div>
             </div>
             <!-- Brown bg -->
@@ -53,7 +53,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-right">
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
-                  Please spread a word about templatemo website. Anyone can download free Bootstrap CSS templates.
+                  Here is my Curicullum Vitae (CV). You can download it above!
                 </p>
               </div>
             </div>
@@ -64,6 +64,10 @@ https://templatemo.com/tm-530-mini-profile
     <!-- End Welcome section -->
 
     <!-- Portfolio section -->
+    <div class="row">
+    <footer class="col-12">
+    <p class="text-center tm-copyright-text">
+    MY PERSONALITY</p>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
@@ -225,12 +229,6 @@ https://templatemo.com/tm-530-mini-profile
           </div>
         </div>
         <!-- row -->
-        <div class="row">
-          <footer class="col-12">
-            <p class="text-center tm-copyright-text">
-            Copyright 2020 Mini Profile Page 
-            
-            - Design: Template Mo</p>
           </footer>
         </div>
       </div>
