--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@ https://templatemo.com/tm-530-mini-profile
     <!-- End Welcome section -->
 
     <!-- Portfolio section -->
-    <div class="row">
-    <footer class="col-12">
-    <p class="text-center tm-copyright-text">
-    MY PERSONALITY</p>
+   <div class="col-md-7 tm-welcome-left-col">
+   <div class="tm-welcome-left">
+     <h2 class="tm-welcome-title">Welcome....</h2>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
