--- a/index.html
+++ b/index.html
@@ -64,81 +64,71 @@ https://templatemo.com/tm-530-mini-profile
     <!-- End Welcome section -->
 
     <!-- Portfolio section -->
-   <div class="col-md-7 tm-welcome-left-col">
-   <div class="tm-welcome-left">
-     <h2 class="tm-welcome-title">Welcome....</h2>
+   <div class="tm-welcome-center">
+     <h2 class="tm-welcome-title">MY PERSONALITY</h2>
+   </div>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                Project Manager
+                <i class="fas fa-globe-asia"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
-                  New Company
-                  <span class="tm-title-small">(2019 January to Present)</span>
+                  OPTIMISTIC
                 </h3>
                 <p class="mb-0">
-                  Nullam a tellus ultricies, ornare purus vel, porttitor massa.
-                  Aliquam facilisis purus ac eros sollicidudin, in mollis neque
-                  facilisis. Duis malesuada, mi non elementum malesuada.
+                  Success comes by our mind. Mind control everything. 
+                  When we said I’m a successful person, 
+                  our bodies try to have the same pace as our mind's.
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Senior UX Designer
+                <i class="fas fa-user-friends"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
-                  Studio One
-                  <span class="tm-title-small">(2017 April to 2018 Dec)</span>
+                  DIFFERENT POINT OF VIEW
                 </h3>
                 <p class="mb-0">
-                  Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
-                  arcu. Morbi aliquam, nunc vel blandit mattis, sapien nisl
-                  convallis sem, quis hendrerit nisl tellus in lectus. Proin at
-                  nibh bibendum, tincidunt mauris sit amet, porta risus. Integer
-                  id malesuada ligula.
+                  I believe that everything happens because of the reason. 
+                  Even the reason is a bad idea for other people, but for me, 
+                  I believe that another idea by other people should be appreciated not judged. 
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                Graphic Designer
+                <i class="fas fa-running"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
-                  Digital Com
-                  <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
+                  NEVER GIVES UP
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  I keep going ahead and going forward because 
+                  I believe that something big is waiting for me.
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                Design School
+                <i class="fas fa-child"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
-                  Art Design College
-                  <span class="tm-title-small">
-                    (2012 May to 2014 Dec)
-                  </span>
+                  ALTRUISM
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  I am not shy to apologize when I was making mistake. 
+                  For me, we have to reflect on ourselves day by day.
                 </p>
               </div>
             </div>
