--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@ https://templatemo.com/tm-530-mini-profile
     <!-- End Welcome section -->
 
     <!-- Portfolio section -->
-   <div class="tm-welcome-center">
-     <h2 class="tm-welcome-title">MY PERSONALITY</h2>
-   </div>
+    <h1 class="text-center tm-copyright-text">
+    MY PERSONALITY</h1>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
