--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ https://templatemo.com/tm-530-mini-profile
     <!-- Portfolio section -->
     <br>
     <br>
+    <br>
+    <br>
     <h1 class="text-center tm-copyright-text">
     MY PERSONALITY</h1>
     <section id="tmPortfolio">
@@ -74,7 +76,7 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                <i class="fas fa-globe-asia"></i>
+                <i class="fas fa-5x fa-globe-asia"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
@@ -90,7 +92,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                <i class="fas fa-user-friends"></i>
+                <i class="fas fa-5x fa-user-friends"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
@@ -106,7 +108,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                <i class="fas fa-running"></i>
+                <i class="fas fa-5x fa-running"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
@@ -121,7 +123,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                <i class="fas fa-child"></i>
+                <i class="fas fa-5x fa-child"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
@@ -148,21 +150,25 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  Quisque venenatis viverra ultrices. Lorem ipsum dolor sit
-                  amet. Nullam sit amet tempor nisl.
+                  I'm talented girl. I can do almost everything.
+                  I believe that my abiliies could make others see me.
+                  But, I've to be keep humble to most of the people out there
                 </p>
               </div>
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  You can absolutely feel free to use Mini Profile for your web page or any usage for your website.
+                  A lot of achievements make others know who am I.
+                  I’ve to be brave than others. Don’t complain. 
+                  Let other people complain because I believed that opportunities always lie where people complain.
                 </p>
               </div>
 
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-balance-scale tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  You are NOT allowed to re-distribute this template in any download website. Else, it is illegal action.
+                  Keep helping others. I’ve to keep helping many people out there. 
+                  Because when the other people happy, I feel I’m a successful girl.
                 </p>
               </div>
             </div>
