--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-contact-items-container">
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
+                <i class="fas fa-5x fa-head-side-brain tm-contact-item-icon"></i>
                 <p class="mb-0">
                   I'm talented girl. I can do almost everything.
                   I believe that my abiliies could make others see me.
@@ -156,7 +156,7 @@ https://templatemo.com/tm-530-mini-profile
                 </p>
               </div>
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
+                <i class="fas fa-5x fa-trophy tm-contact-item-icon"></i>
                 <p class="mb-0">
                   A lot of achievements make others know who am I.
                   I’ve to be brave than others. Don’t complain. 
@@ -165,7 +165,7 @@ https://templatemo.com/tm-530-mini-profile
               </div>
 
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-balance-scale tm-contact-item-icon"></i>
+                <i class="fas fa-5x fa-people-carry tm-contact-item-icon"></i>
                 <p class="mb-0">
                   Keep helping others. I’ve to keep helping many people out there. 
                   Because when the other people happy, I feel I’m a successful girl.
