--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://templatemo.com/tm-530-mini-profile
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Mini Profile</h1>
-                <p class="tm-brand-description mb-0">Hello! My name is Anggun Mutiara Ratnasari. Usually known as Anggun..</p>
+                <p class="tm-brand-description mb-0">Hello! My name is Anggun Mutiara Ratnasari. Usually known as Anggun</p>
               </div>
             </div>
           </div>
@@ -40,7 +40,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- White transparent bg -->
             <div class="col-md-7 tm-welcome-left-col">
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Welcome....</h2>
+                <h2 class="tm-welcome-title">Welcome</h2>
                 <p class="pb-0">
                   My name is Anggun Mutiara Ratnasari.
                   I live in Grobogan, Central Java, Indonesia.
@@ -66,17 +66,18 @@ https://templatemo.com/tm-530-mini-profile
     <!-- Portfolio section -->
     <br>
     <br>
-    <br>
-    <br>
-    <h1 class="text-center tm-copyright-text">
-    MY PERSONALITY</h1>
+    <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
+      <div class="tm-brand-container text-center">
+                <h1 class="tm-brand-name">MY PERSONALITY</h1>
+      </div>
+    </div>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                <i class="fas fa-5x fa-globe-asia"></i>
+                <i class="fas fa-4x fa-globe-asia"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
@@ -92,7 +93,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                <i class="fas fa-5x fa-user-friends"></i>
+                <i class="fas fa-4x fa-user-friends"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
@@ -123,7 +124,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                <i class="fas fa-5x fa-child"></i>
+                <i class="fas fa-4x fa-child"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
@@ -148,7 +149,7 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-contact-items-container">
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-head-side-brain tm-contact-item-icon"></i>
+                <i class="fas fa-5x fa-user-tag tm-contact-item-icon"></i>
                 <p class="mb-0">
                   I'm talented girl. I can do almost everything.
                   I believe that my abiliies could make others see me.
@@ -224,6 +225,38 @@ https://templatemo.com/tm-530-mini-profile
             </form>
           </div>
         </div>
+        
+        <div class="row">
+          <div class="col-12">
+            <form
+              action="index.html"
+              method="POST"
+              id="tmContactForm"
+              class="tm-bg-white-transparent"
+            >
+              <div class="form-group">
+                <input
+                  type="text"
+                  id="contact_name"
+                  name="contact_name"
+                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
+                  placeholder="<i class="fab fa-whatsapp"></i> 082144150871"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="email"
+                  id="contact_email"
+                  name="contact_email"
+                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
+                  placeholder="<i class="fas fa-envelope"></i> anggunmutiararatnasari02@gmail.com"
+                  required
+                />
+            </form>
+          </div>
+        </div>
+        
         <!-- row -->
           </footer>
         </div>
