--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ https://templatemo.com/tm-530-mini-profile
     <!-- Portfolio section -->
     <br>
     <br>
-    <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
+    <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner text-center">
       <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">MY PERSONALITY</h1>
       </div>
@@ -124,7 +124,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                <i class="fas fa-4x fa-child"></i>
+                <i class="fas fa-5x fa-child"></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
@@ -240,8 +240,7 @@ https://templatemo.com/tm-530-mini-profile
                   id="contact_name"
                   name="contact_name"
                   class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="<i class="fab fa-whatsapp"></i> 082144150871"
-                  required
+                  <i class="fab fa-whatsapp">082144150871</i>
                 />
               </div>
               <div class="form-group">
@@ -250,7 +249,8 @@ https://templatemo.com/tm-530-mini-profile
                   id="contact_email"
                   name="contact_email"
                   class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="<i class="fas fa-envelope"></i> anggunmutiararatnasari02@gmail.com"
+                  <i class="fas fa-envelope">anggunmutiararatnasari02@gmail.com</i> 
+                  placeholder="anggunmutiararatnasari02@gmail.com"
                   required
                 />
             </form>
