--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ https://templatemo.com/tm-530-mini-profile
                   placeholder="anggunmutiararatnasari02@gmail.com"
                   required
                 />
+              </div>
             </form>
           </div>
         </div>
