--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ https://templatemo.com/tm-530-mini-profile
     <!-- Portfolio section -->
     <br>
     <br>
-    <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner text-center">
-      <div class="tm-brand-container text-center">
-                <h1 class="tm-brand-name">MY PERSONALITY</h1>
-      </div>
+    <div class="tm-portfolio-item">
+       <div class="tm-portfolio-name text-white tm-bg-green">
+         <i class="fas fa-4x fa-globe-asia"></i>
+       </div>
     </div>
     <section id="tmPortfolio">
       <div class="container-fluid">
@@ -221,38 +221,6 @@ https://templatemo.com/tm-530-mini-profile
                 >
                   Submit
                 </button>
-              </div>
-            </form>
-          </div>
-        </div>
-        
-        <div class="row">
-          <div class="col-12">
-            <form
-              action="index.html"
-              method="POST"
-              id="tmContactForm"
-              class="tm-bg-white-transparent"
-            >
-              <div class="form-group">
-                <input
-                  type="text"
-                  id="contact_name"
-                  name="contact_name"
-                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  <i class="fab fa-whatsapp">082144150871</i>
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  type="email"
-                  id="contact_email"
-                  name="contact_email"
-                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  <i class="fas fa-envelope">anggunmutiararatnasari02@gmail.com</i> 
-                  placeholder="anggunmutiararatnasari02@gmail.com"
-                  required
-                />
               </div>
             </form>
           </div>
