--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ https://templatemo.com/tm-530-mini-profile
     <!-- Portfolio section -->
     <br>
     <br>
-    <div class="tm-portfolio-item">
-       <div class="tm-portfolio-name text-white tm-bg-green">
-         <i class="fas fa-4x fa-globe-asia"></i>
+    <div class="tm-portfolio-item text-center">
+       <div class="tm-portfolio-name text-white tm-bg-grey">
+         <h1>MY PERSONALITY</h1>
        </div>
     </div>
     <section id="tmPortfolio">
