--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ https://templatemo.com/tm-530-mini-profile
     <!-- Portfolio section -->
     <br>
     <br>
-    <div class="tm-portfolio-item text-center">
-       <div class="tm-portfolio-name text-white tm-bg-grey">
+    <div class="tm-portfolio-item">
+       <div class="tm-portfolio-name text-white tm-bg-black text-center">
          <h1>MY PERSONALITY</h1>
        </div>
     </div>
