--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@ https://templatemo.com/tm-530-mini-profile
     <!-- Portfolio section -->
     <br>
     <br>
-    <div class="tm-portfolio-item">
-       <div class="tm-portfolio-name text-white tm-bg-black text-center">
-         <h1>MY PERSONALITY</h1>
-       </div>
-    </div>
+    <br>
+    <br>
+    <h1 class="text-center tm-copyright-text">
+    MY PERSONALITY</h1>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
