--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-530-mini-profile
     <br>
     <br>
     <br>
-    <h1 class="text-center tm-copyright-text"> MY PERSONALITY/h1>
+    <h1 class="text-center tm-copyright-text"> MY PERSONALITY</h1>
     <section id="tmPortfolio">
       <div class="container-fluid">
         <div class="row">
