--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right">
-                <a href="Downloadable%20Resume_ANGGUN%20MUTIARA%20RATNASARI.pdf" target=<i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i></a>
+                <a href="CV_Anggun%20Mutiara%20Ratnasari.jpeg" target=<i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i></a>
                 <p class="mb-0">
                   Here is my Curriculum Vitae(CV). You can download it above!
                 </p>
