--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-right">
                 <a href="CV_Anggun%20Mutiara%20Ratnasari.jpeg" target=<i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i></a>
                 <p class="mb-0">
-                  Here is my Curriculum Vitae(CV). You can download it above!
+                  Here is my Curriculum Vitae(CV). You can click it above! Hope you like it!
                 </p>
               </div>
             </div>
