--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@ https://templatemo.com/tm-530-mini-profile
        <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
          <div class="tm-brand-container text-center">
             <h1 class="tm-brand-name">CONTACT</h1>
-                <div class="tm-brand-description mb-0"><i class="fab fa-2x fa-whatsapp"></i> 082144150871 </div><br> 
-                <div class="tm-brand-description mb-0"><i class="fab fa-2x fa-line"></i> anggunmutiara02 </div><br>
-                <div class="tm-brand-description mb-0"><i class="fab fa-2x fa-instagram"></i> @anggnnn</div><br>
-                <div class="tm-brand-description mb-0"><i class="fas fa-2x fa-envelope"></i> anggunmutiararatnasari02@gmail.com </div>
+                <i class="fab fa-2x fa-whatsapp"></i> 082144150871<br> 
+                <i class="fab fa-2x fa-line"></i> anggunmutiara02<br>
+                <i class="fab fa-2x fa-instagram"></i> @anggnnn<br>
+                <i class="fas fa-2x fa-envelope"></i> anggunmutiararatnasari02@gmail.com
          </div>
         </div>
         
