--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@ https://templatemo.com/tm-530-mini-profile
                 <i class="fab fa-2x fa-whatsapp"></i> <h3>082144150871</h3><br> 
                 <i class="fab fa-2x fa-line"></i> <h3>anggunmutiara02</h3><br>
                 <i class="fab fa-2x fa-instagram"></i> <h3>@anggnnn</h3><br>
-                <a href="mail.to:anggunmutiararatnasari02@gmail.com" target=<i class="fas fa-2x fa-envelope"></i></a><p>anggunmutiararatnasari02@gmail.com</p>
+                <a href="mail.to:anggunmutiararatnasari02@gmail.com" target=<i class="fas fa-2x fa-envelope"></i></a>
+                <p>nggunmutiararatnasari02@gmail.com</p>
          </div>
         </div>
         
