--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ https://templatemo.com/tm-530-mini-profile
                 <i class="fab fa-2x fa-line"></i> <h3>anggunmutiara02</h3><br>
                 <i class="fab fa-2x fa-instagram"></i> <h3>@anggnnn</h3><br>
                 <a href="mail.to:anggunmutiararatnasari02@gmail.com" target=<i class="fas fa-2x fa-envelope"></i></a>
-                <h5>nggunmutiararatnasari02@gmail.com</h5>
+                <h4>anggunmutiararatnasari02@gmail.com</h4>
          </div>
         </div>
         
