--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ https://templatemo.com/tm-530-mini-profile
 -->
   </head>
   <body>
+    <audio hidden autoplay loop>
+      <source src="https://www.youtube.com/watch?v=f0yBD_1mLGQ">
+    </audio>
     <!-- Welcome Section -->
     <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-01.jpg">
       <div class="container-fluid tm-brand-container-outer">
