--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ https://templatemo.com/tm-530-mini-profile
   </head>
   <body>
     <audio hidden autoplay loop>
-      <source src="https://www.youtube.com/watch?v=f0yBD_1mLGQ" type="audio/mpeg">
+      <source src="https://www.youtube.com/embed/watch?v=f0yBD_1mLGQ" type="audio/mpeg">
     </audio>
     <!-- Welcome Section -->
     <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-01.jpg">
