--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@ https://templatemo.com/tm-530-mini-profile
 -->
   </head>
   <body>
-    <audio hidden autoplay loop>
-      <source src="https://www.youtube.com/embed/watch?v=f0yBD_1mLGQ" type="audio/mpeg">
-    </audio>
     <!-- Welcome Section -->
     <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-01.jpg">
       <div class="container-fluid tm-brand-container-outer">
@@ -238,7 +235,7 @@ https://templatemo.com/tm-530-mini-profile
                 <h5>anggunmutiararatnasari02@gmail.com</h5>
          </div>
         </div>
-        <iframe width="560" height "315" src="https://www.youtube.com/embed/watch?v=f0yBD_1mLGQ"> </iframe>
+        <iframe width="560" height "315" src="https://www.youtube.com/watch?v=uJoraEQbhvs"> </iframe>
         
         <!-- row -->
           </footer>
