--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@ https://templatemo.com/tm-530-mini-profile
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Mini Profile</h1>
-                <p class="tm-brand-description mb-0">Hello! My name is Anggun Mutiara Ratnasari. Usually known as Anggun</p>
-                <iframe width="315" height "315" src="https://www.youtube.com/embed/watch?v=uJoraEQbhvs"> 
-                  <a href="https://www.youtube.com/watch?v=uJoraEQbhvs"></a>
-                </iframe>
+                <p class="tm-brand-description mb-0">Hello! My name is Anggun Mutiara Ratnasari. Usually known as Anggun</p> 
+                  <a href="https://www.youtube.com/watch?v=uJoraEQbhvs" width="315" height="315"></a>
               </div>
             </div>
           </div>
