--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Mini Profile</h1>
                 <p class="tm-brand-description mb-0">Hello! My name is Anggun Mutiara Ratnasari. Usually known as Anggun</p> 
-                  <a href="https://www.youtube.com/watch?v=uJoraEQbhvs" width="315" height="315"></a>
+                  <a href="https://www.youtube.com/watch?v=uJoraEQbhvs" target=<i class="fab fa-4x fa-youtube p-3 tm-welcome-icon"></i></a>
               </div>
             </div>
           </div>
