--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                <i class="fas fa-4x fa-globe-asia"></i>
+                <i class="data-image-src="img/optimistic.PNG">></i>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
