--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@ https://templatemo.com/tm-530-mini-profile
         <div class="row">
           <div class="col-12">
             <div class="tm-portfolio-item">
-              <div class="tm-portfolio-name text-white tm-bg-green">
-                <i class="data-image-src="img/optimistic.PNG">></i>
+              <div class="data-image-src="img/optimistic.PNG">
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
