--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ https://templatemo.com/tm-530-mini-profile
                 <h1 class="tm-brand-name">Mini Profile</h1>
                 <p class="tm-brand-description mb-0">Hello! My name is Anggun Mutiara Ratnasari. Usually known as Anggun</p> 
                  <a href="https://www.youtube.com/watch?v=V51g-BW8Xj8&rel=0" target=<i class="fab fa-4x fa-youtube p-3 tm-brand-name"></i></a>
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/V51g-BW8Xj8" 
+                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -75,7 +77,7 @@ https://templatemo.com/tm-530-mini-profile
         <div class="row">
           <div class="col-12">
             <div class="tm-portfolio-item">
-              <div class="data-image-src="img/optimistic.PNG">
+              <div class="data-image-src="img/optimistic.png">
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
