--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ https://templatemo.com/tm-530-mini-profile
         <div class="row">
           <div class="col-12">
             <div class="tm-portfolio-item">
-              <div class="<img src="img/optimistic.png">"
+              <img src="img/optimistic.png"/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
