--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ https://templatemo.com/tm-530-mini-profile
         <div class="row">
           <div class="col-12">
             <div class="tm-portfolio-item">
-              <img src="img/optimistic.png"/>
+              <div class="tm-portfolio-name text-white tm-bg-green">
+                <img src = "optimistic.PNG"/>
+              </div>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
