--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
+                <img src="optimistic.PNG" width="100" height="100"/>
               </div>
-            </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
                   OPTIMISTIC
